src/frontend/TLParser.cpp

// Generated from TL.g4 by ANTLR 4.13.2


#include "TLListener.h"
#include "TLVisitor.h"

#include "TLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TLParserStaticData final {
  TLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TLParserStaticData(const TLParserStaticData&) = delete;
  TLParserStaticData(TLParserStaticData&&) = delete;
  TLParserStaticData& operator=(const TLParserStaticData&) = delete;
  TLParserStaticData& operator=(TLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TLParserStaticData> tlParserStaticData = nullptr;

void tlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tlParserStaticData != nullptr) {
    return;
  }
#else
  assert(tlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TLParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "tensorDecl", "assignment", "tensorLiteral", 
      "scalarLiteral", "forLoop", "expression", "functionCall", "functionDecl"
    },
    std::vector<std::string>{
      "", "'func'", "'tensor'", "'for'", "'in'", "'sum'", "'grad'", "'matmul'", 
      "'+'", "'*'", "'='", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
      "';'"
    },
    std::vector<std::string>{
      "", "", "TENSOR", "FOR", "IN", "SUM", "GRAD", "MATMUL", "PLUS", "MUL", 
      "EQ", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
      "SEMI", "INTEGER", "FLOAT", "ID", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tlParserStaticData = std::move(staticData);
}

}

TLParser::TLParser(TokenStream *input) : TLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TLParser::TLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tlParserStaticData->atn, tlParserStaticData->decisionToDFA, tlParserStaticData->sharedContextCache, options);
}

TLParser::~TLParser() {
  delete _interpreter;
}

const atn::ATN& TLParser::getATN() const {
  return *tlParserStaticData->atn;
}

std::string TLParser::getGrammarFileName() const {
  return "TL.g4";
}

const std::vector<std::string>& TLParser::getRuleNames() const {
  return tlParserStaticData->ruleNames;
}

const dfa::Vocabulary& TLParser::getVocabulary() const {
  return tlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TLParser::getSerializedATN() const {
  return tlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

TLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::ProgramContext::EOF() {
  return getToken(TLParser::EOF, 0);
}

std::vector<TLParser::StatementContext *> TLParser::ProgramContext::statement() {
  return getRuleContexts<TLParser::StatementContext>();
}

TLParser::StatementContext* TLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<TLParser::StatementContext>(i);
}

std::vector<TLParser::FunctionDeclContext *> TLParser::ProgramContext::functionDecl() {
  return getRuleContexts<TLParser::FunctionDeclContext>();
}

TLParser::FunctionDeclContext* TLParser::ProgramContext::functionDecl(size_t i) {
  return getRuleContext<TLParser::FunctionDeclContext>(i);
}


size_t TLParser::ProgramContext::getRuleIndex() const {
  return TLParser::RuleProgram;
}

void TLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void TLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any TLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TLParser::ProgramContext* TLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2117870) != 0)) {
      setState(22);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case TLParser::TENSOR:
        case TLParser::FOR:
        case TLParser::SUM:
        case TLParser::GRAD:
        case TLParser::MATMUL:
        case TLParser::LPAREN:
        case TLParser::LBRACK:
        case TLParser::ID: {
          setState(20);
          statement();
          break;
        }

        case TLParser::T__0: {
          setState(21);
          functionDecl();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(26);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(27);
    match(TLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TLParser::TensorDeclContext* TLParser::StatementContext::tensorDecl() {
  return getRuleContext<TLParser::TensorDeclContext>(0);
}

tree::TerminalNode* TLParser::StatementContext::SEMI() {
  return getToken(TLParser::SEMI, 0);
}

TLParser::AssignmentContext* TLParser::StatementContext::assignment() {
  return getRuleContext<TLParser::AssignmentContext>(0);
}

TLParser::ForLoopContext* TLParser::StatementContext::forLoop() {
  return getRuleContext<TLParser::ForLoopContext>(0);
}

TLParser::ExpressionContext* TLParser::StatementContext::expression() {
  return getRuleContext<TLParser::ExpressionContext>(0);
}


size_t TLParser::StatementContext::getRuleIndex() const {
  return TLParser::RuleStatement;
}

void TLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void TLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any TLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TLParser::StatementContext* TLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, TLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(29);
      tensorDecl();
      setState(30);
      match(TLParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(32);
      assignment();
      setState(33);
      match(TLParser::SEMI);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(35);
      forLoop();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(36);
      expression(0);
      setState(37);
      match(TLParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TensorDeclContext ------------------------------------------------------------------

TLParser::TensorDeclContext::TensorDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::TensorDeclContext::TENSOR() {
  return getToken(TLParser::TENSOR, 0);
}

tree::TerminalNode* TLParser::TensorDeclContext::ID() {
  return getToken(TLParser::ID, 0);
}

tree::TerminalNode* TLParser::TensorDeclContext::EQ() {
  return getToken(TLParser::EQ, 0);
}

TLParser::ExpressionContext* TLParser::TensorDeclContext::expression() {
  return getRuleContext<TLParser::ExpressionContext>(0);
}


size_t TLParser::TensorDeclContext::getRuleIndex() const {
  return TLParser::RuleTensorDecl;
}

void TLParser::TensorDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTensorDecl(this);
}

void TLParser::TensorDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTensorDecl(this);
}


std::any TLParser::TensorDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitTensorDecl(this);
  else
    return visitor->visitChildren(this);
}

TLParser::TensorDeclContext* TLParser::tensorDecl() {
  TensorDeclContext *_localctx = _tracker.createInstance<TensorDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, TLParser::RuleTensorDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    match(TLParser::TENSOR);
    setState(42);
    match(TLParser::ID);
    setState(43);
    match(TLParser::EQ);
    setState(44);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

TLParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::AssignmentContext::ID() {
  return getToken(TLParser::ID, 0);
}

tree::TerminalNode* TLParser::AssignmentContext::EQ() {
  return getToken(TLParser::EQ, 0);
}

TLParser::ExpressionContext* TLParser::AssignmentContext::expression() {
  return getRuleContext<TLParser::ExpressionContext>(0);
}


size_t TLParser::AssignmentContext::getRuleIndex() const {
  return TLParser::RuleAssignment;
}

void TLParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void TLParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any TLParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

TLParser::AssignmentContext* TLParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 6, TLParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(TLParser::ID);
    setState(47);
    match(TLParser::EQ);
    setState(48);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TensorLiteralContext ------------------------------------------------------------------

TLParser::TensorLiteralContext::TensorLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::TensorLiteralContext::LBRACK() {
  return getToken(TLParser::LBRACK, 0);
}

tree::TerminalNode* TLParser::TensorLiteralContext::RBRACK() {
  return getToken(TLParser::RBRACK, 0);
}

std::vector<TLParser::TensorLiteralContext *> TLParser::TensorLiteralContext::tensorLiteral() {
  return getRuleContexts<TLParser::TensorLiteralContext>();
}

TLParser::TensorLiteralContext* TLParser::TensorLiteralContext::tensorLiteral(size_t i) {
  return getRuleContext<TLParser::TensorLiteralContext>(i);
}

std::vector<TLParser::ScalarLiteralContext *> TLParser::TensorLiteralContext::scalarLiteral() {
  return getRuleContexts<TLParser::ScalarLiteralContext>();
}

TLParser::ScalarLiteralContext* TLParser::TensorLiteralContext::scalarLiteral(size_t i) {
  return getRuleContext<TLParser::ScalarLiteralContext>(i);
}

std::vector<tree::TerminalNode *> TLParser::TensorLiteralContext::COMMA() {
  return getTokens(TLParser::COMMA);
}

tree::TerminalNode* TLParser::TensorLiteralContext::COMMA(size_t i) {
  return getToken(TLParser::COMMA, i);
}


size_t TLParser::TensorLiteralContext::getRuleIndex() const {
  return TLParser::RuleTensorLiteral;
}

void TLParser::TensorLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTensorLiteral(this);
}

void TLParser::TensorLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTensorLiteral(this);
}


std::any TLParser::TensorLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitTensorLiteral(this);
  else
    return visitor->visitChildren(this);
}

TLParser::TensorLiteralContext* TLParser::tensorLiteral() {
  TensorLiteralContext *_localctx = _tracker.createInstance<TensorLiteralContext>(_ctx, getState());
  enterRule(_localctx, 8, TLParser::RuleTensorLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(TLParser::LBRACK);
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TLParser::LBRACK: {
        setState(51);
        tensorLiteral();
        setState(56);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == TLParser::COMMA) {
          setState(52);
          match(TLParser::COMMA);
          setState(53);
          tensorLiteral();
          setState(58);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case TLParser::INTEGER:
      case TLParser::FLOAT: {
        setState(59);
        scalarLiteral();
        setState(64);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == TLParser::COMMA) {
          setState(60);
          match(TLParser::COMMA);
          setState(61);
          scalarLiteral();
          setState(66);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(69);
    match(TLParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScalarLiteralContext ------------------------------------------------------------------

TLParser::ScalarLiteralContext::ScalarLiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::ScalarLiteralContext::INTEGER() {
  return getToken(TLParser::INTEGER, 0);
}

tree::TerminalNode* TLParser::ScalarLiteralContext::FLOAT() {
  return getToken(TLParser::FLOAT, 0);
}


size_t TLParser::ScalarLiteralContext::getRuleIndex() const {
  return TLParser::RuleScalarLiteral;
}

void TLParser::ScalarLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScalarLiteral(this);
}

void TLParser::ScalarLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScalarLiteral(this);
}


std::any TLParser::ScalarLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitScalarLiteral(this);
  else
    return visitor->visitChildren(this);
}

TLParser::ScalarLiteralContext* TLParser::scalarLiteral() {
  ScalarLiteralContext *_localctx = _tracker.createInstance<ScalarLiteralContext>(_ctx, getState());
  enterRule(_localctx, 10, TLParser::RuleScalarLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _la = _input->LA(1);
    if (!(_la == TLParser::INTEGER

    || _la == TLParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForLoopContext ------------------------------------------------------------------

TLParser::ForLoopContext::ForLoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TLParser::ForLoopContext::FOR() {
  return getToken(TLParser::FOR, 0);
}

std::vector<tree::TerminalNode *> TLParser::ForLoopContext::ID() {
  return getTokens(TLParser::ID);
}

tree::TerminalNode* TLParser::ForLoopContext::ID(size_t i) {
  return getToken(TLParser::ID, i);
}

tree::TerminalNode* TLParser::ForLoopContext::IN() {
  return getToken(TLParser::IN, 0);
}

tree::TerminalNode* TLParser::ForLoopContext::LBRACE() {
  return getToken(TLParser::LBRACE, 0);
}

tree::TerminalNode* TLParser::ForLoopContext::RBRACE() {
  return getToken(TLParser::RBRACE, 0);
}

std::vector<TLParser::StatementContext *> TLParser::ForLoopContext::statement() {
  return getRuleContexts<TLParser::StatementContext>();
}

TLParser::StatementContext* TLParser::ForLoopContext::statement(size_t i) {
  return getRuleContext<TLParser::StatementContext>(i);
}


size_t TLParser::ForLoopContext::getRuleIndex() const {
  return TLParser::RuleForLoop;
}

void TLParser::ForLoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForLoop(this);
}

void TLParser::ForLoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForLoop(this);
}


std::any TLParser::ForLoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitForLoop(this);
  else
    return visitor->visitChildren(this);
}

TLParser::ForLoopContext* TLParser::forLoop() {
  ForLoopContext *_localctx = _tracker.createInstance<ForLoopContext>(_ctx, getState());
  enterRule(_localctx, 12, TLParser::RuleForLoop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(TLParser::FOR);
    setState(74);
    match(TLParser::ID);
    setState(75);
    match(TLParser::IN);
    setState(76);
    match(TLParser::ID);
    setState(77);
    match(TLParser::LBRACE);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2117868) != 0)) {
      setState(78);
      statement();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(TLParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

TLParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TLParser::ExpressionContext::getRuleIndex() const {
  return TLParser::RuleExpression;
}

void TLParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AddOpContext ------------------------------------------------------------------

std::vector<TLParser::ExpressionContext *> TLParser::AddOpContext::expression() {
  return getRuleContexts<TLParser::ExpressionContext>();
}

TLParser::ExpressionContext* TLParser::AddOpContext::expression(size_t i) {
  return getRuleContext<TLParser::ExpressionContext>(i);
}

tree::TerminalNode* TLParser::AddOpContext::PLUS() {
  return getToken(TLParser::PLUS, 0);
}

TLParser::AddOpContext::AddOpContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::AddOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddOp(this);
}
void TLParser::AddOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddOp(this);
}

std::any TLParser::AddOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitAddOp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallContext ------------------------------------------------------------------

TLParser::FunctionCallContext* TLParser::FuncCallContext::functionCall() {
  return getRuleContext<TLParser::FunctionCallContext>(0);
}

TLParser::FuncCallContext::FuncCallContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::FuncCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncCall(this);
}
void TLParser::FuncCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncCall(this);
}

std::any TLParser::FuncCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitFuncCall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdentifierContext ------------------------------------------------------------------

tree::TerminalNode* TLParser::IdentifierContext::ID() {
  return getToken(TLParser::ID, 0);
}

TLParser::IdentifierContext::IdentifierContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}
void TLParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifier(this);
}

std::any TLParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MatmulContext ------------------------------------------------------------------

tree::TerminalNode* TLParser::MatmulContext::MATMUL() {
  return getToken(TLParser::MATMUL, 0);
}

tree::TerminalNode* TLParser::MatmulContext::LPAREN() {
  return getToken(TLParser::LPAREN, 0);
}

std::vector<TLParser::ExpressionContext *> TLParser::MatmulContext::expression() {
  return getRuleContexts<TLParser::ExpressionContext>();
}

TLParser::ExpressionContext* TLParser::MatmulContext::expression(size_t i) {
  return getRuleContext<TLParser::ExpressionContext>(i);
}

tree::TerminalNode* TLParser::MatmulContext::COMMA() {
  return getToken(TLParser::COMMA, 0);
}

tree::TerminalNode* TLParser::MatmulContext::RPAREN() {
  return getToken(TLParser::RPAREN, 0);
}

TLParser::MatmulContext::MatmulContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::MatmulContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatmul(this);
}
void TLParser::MatmulContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatmul(this);
}

std::any TLParser::MatmulContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitMatmul(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulOpContext ------------------------------------------------------------------

std::vector<TLParser::ExpressionContext *> TLParser::MulOpContext::expression() {
  return getRuleContexts<TLParser::ExpressionContext>();
}

TLParser::ExpressionContext* TLParser::MulOpContext::expression(size_t i) {
  return getRuleContext<TLParser::ExpressionContext>(i);
}

tree::TerminalNode* TLParser::MulOpContext::MUL() {
  return getToken(TLParser::MUL, 0);
}

TLParser::MulOpContext::MulOpContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::MulOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulOp(this);
}
void TLParser::MulOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulOp(this);
}

std::any TLParser::MulOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitMulOp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LiteralContext ------------------------------------------------------------------

TLParser::TensorLiteralContext* TLParser::LiteralContext::tensorLiteral() {
  return getRuleContext<TLParser::TensorLiteralContext>(0);
}

TLParser::LiteralContext::LiteralContext(ExpressionContext *ctx) { copyFrom(ctx); }

void TLParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}
void TLParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}

std::any TLParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TLVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SumContext ------------------------------------------------------------------

tree::TerminalNode* TLParser::SumContext::SUM() {
  return getToken(TLParser::SUM, 0);
}

tree::TerminalNode* TLParser::SumContext::LPAREN() {
  return getToken(TLParser::LPAREN, 0);
}
